src/App.css
.App {
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: hidden;
  width: 100vw;
  height: 100vh;
}
* {
  margin: 0;
  padding: 0;
}
::-webkit-scrollbar {
  width: 0;
}
::-webkit-scrollbar-track {
  background: transparent;
}
::-webkit-scrollbar-thumb {
  background: transparent;
}

